[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/UserInterface/PauseMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Game.gd" type="Script" id=2]
[ext_resource path="res://src/Level/Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Objects/Coin.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/theme/hero_health_bar.tres" type="Theme" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=7]

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Level" parent="." instance=ExtResource( 3 )]

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="PauseMenu" parent="InterfaceLayer" instance=ExtResource( 1 )]

[node name="Control" type="Control" parent="InterfaceLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Icon" type="Sprite" parent="InterfaceLayer/Control"]
position = Vector2( 49.4999, 426.5 )
scale = Vector2( 0.433333, 0.433333 )
texture = ExtResource( 6 )

[node name="HealthBar" type="ProgressBar" parent="InterfaceLayer/Control"]
margin_left = 88.5
margin_top = 429.5
margin_right = 219.5
margin_bottom = 456.5
theme = ExtResource( 5 )
max_value = 5.0
step = 1.0
value = 3.0
rounded = true

[node name="Coin" parent="InterfaceLayer/Control" instance=ExtResource( 4 )]
position = Vector2( 687, 26 )

[node name="Label" type="Label" parent="InterfaceLayer/Control"]
margin_left = 702.0
margin_top = 15.0
margin_right = 742.0
margin_bottom = 35.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.886275, 0.905882, 0.262745, 1 )
text = ":"
